<resources>
    <string name="app_name">KARPOOL Driver</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_name">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">The phone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_create">Create</string>
    <string name="title_trips">My Trips</string>
    <string name="disclaimer_record">I attest to the fact that I have never been convicted of a crime. </string>
    <string name="title_account">Account</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- CREATE PAGE -->
    <string name="create_trip_button">CREATE TRIP</string>
    <string name="create_trip_date">Set Date</string>
    <string name="create_trip_time">Set Time</string>


    <!-- Strings for my trips page -->
    <string name="trips_upcoming">Upcoming</string>
    <string name="trips_past">Past</string>
    <string name="trips_none">You have no upcoming trips</string>
    <string name="past_trips_none">You have no past trips</string>


    <!-- Trip activity -->
    <string name="trip_origin">Origin</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_price">Price</string>
    <string name="trip_date">Date</string>
    <string name="trip_time">Time</string>
    <string name="trip_seats">Seats Available</string>
    <string name="trips_passengers">View Passengers</string>
    <string name="trip_delete">DELETE TRIP</string>
    <string name="trip_close">CLOSE TRIP</string>


    <!-- Passenger activity -->
    <string name="passengers_label">Passengers</string>
    <string name="passenger_none">No passengers have joined this trip yet</string>


    <!-- preference screen -->

    <string name="action_help">Help</string>
    <string name="action_sign_out">Sign out</string>
    <string name="title_activity_passenger">PassengerActivity</string>
    <string name="title_activity_help">HelpActivity</string>


    <!-- HELP ACTIVITY -->

    <string name="help_create_title">How do I create a trip?</string>
    <string name="help_create">To create a trip, simply fill in the required information in the create tab. To select a time or date, simply tap on the text. If you made a mistake, you can delete your trip assuming no passengers have joined.</string>


    <string name="help_view_passenger">How do I know if someone has joined my trip?</string>
    <string name="help_view">There are two ways to know if somebody has joined your trip. First, navigate to the specific trip. Once you are there, you can either look at the seats available or click view passengers for a more in-depth list of your passengers as well as how to contact them.</string>


    <string name="help_modify_title">Can I modify a trips details?</string>
    <string name="help_modify">Yes! To do this, you just need to open the specific trip and tap on the item you want to modify. Please note however that once a passenger joins, you cannot modify trip details. If there is an error, you should contact your passengers or delete the trip.</string>

    <string name="help_rating_title">Can I see my rating?</string>
    <string name="help_rating">You cannot see a rating a passenger has given you for a specific trip, however, your overall rating is listed on the account tab.</string>

    <string name="help_close_delete_title">What is the difference between closing and deleting a trip?</string>
    <string name="help_close_delete">When a trip has not yet occurred (at most one day before the trip), a specific trip will display a delete trip button which allows you to permanently delete a trip. Close trip arrives on the day of the trip and onwards and is used to indicate that a trip is complete. Please note that once you have reached the day of the trip, you cannot cancel it.</string>


</resources>

