<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:layout_editor_absoluteY="25dp">
    tools:context=".TripActivity">


    <TextView
        android:id="@+id/modifyOriginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/trip_origin"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/modifyTripOrigin" />

    <TextView
        android:id="@+id/newDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="68dp"
        android:text="@string/trip_destination"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/modifyTripDestination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <TextView
        android:id="@+id/modifyPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/trip_price"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <TextView
        android:id="@+id/modifySeatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/trip_seats"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <TextView
        android:id="@+id/modifyTripOrigin"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="Montreal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/modifyTripDestination"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modifyTripDestination"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="Compton"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/newDestination"
        app:layout_constraintStart_toStartOf="@+id/modifyTripPrice"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <TextView
        android:id="@+id/modifyTripPrice"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="$100"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/modifyTripSeats"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <TextView
        android:id="@+id/modifyTripSeats"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/modifyTripDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/modifyTripDate"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <TextView
        android:id="@+id/modifyTripDate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="15-10-2018"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/modifyTripTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/modifyTripTime"
        app:layout_constraintTop_toBottomOf="@+id/modifyTripSeats" />

    <TextView
        android:id="@+id/modifyTripTime"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="20:00"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divider12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTripDate" />

    <TextView
        android:id="@+id/modifyDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/trip_date"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/modifyTimeLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/modifyTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/trip_time"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="404dp"
        android:text="@string/trip_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider12" />

    <View
        android:id="@+id/divider7"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/modifyTripDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider8"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="41dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTripDestination" />

    <View
        android:id="@+id/divider9"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/modifyTripSeats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <View
        android:id="@+id/divider10"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/modifyTripSeats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTripSeats" />

    <View
        android:id="@+id/divider11"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/modifyTripDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTripDate" />

    <View
        android:id="@+id/divider12"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTripTime" />

</android.support.constraint.ConstraintLayout>